<resources>
    <string name="app_name" translatable="false">Serial Manager</string>
    <string name="tap_to_open_main_activity">Tap to open app</string>
    <string name="notification_usb_connected_number">Connected USB devices: %1$d</string>
    <string name="notification_bluetooth_connected_device">Connected Bluetooth device: %1$s</string>
    <string name="notification_bluetooth_not_connected">Bluetooth device not connected</string>
    <string name="widget_receive_name" translatable="false">Serial Manager Receive</string>
    <string name="widget_send_name" translatable="false">Serial Manager Send</string>
    <string name="md_choose_label">Choose</string>
    <string name="settings">Settings</string>
    <string name="toast_serial_send_warning">SerialManager: Connection error</string>
    <string name="toast_serial_send_warning_empty_data">SerialManager: Data is null</string>
    <string name="delete_all_commands">Delete all commands</string>
    <string name="import_commands">Import commands</string>
    <string name="export_commands">Export commands</string>
    <string name="message_export_success">Commands successfully saved: %1$s</string>
    <string name="message_commands_import_success">Commands successfully imported</string>
    <string name="message_commands_import_error">An error occurred during import</string>
    <string name="message_file_read_error">File read error</string>
    <string name="send_data_screen_state" translatable="false">{screen:%1$s}</string>
    <string name="webserver_info" translatable="false">WebServer: <b>%s:%d</b>\r\nWebSocket: <b>%s:%d/ws</b></string>
    <string name="websocket_info" translatable="false">WebSocket server address: <b>%s:%d/ws</b></string>
    <string name="pref_bt_device_no_device">No device</string>
    <string name="pref_bt_device_template" translatable="false">%1$s [ %2$s ]</string>
    <string name="pref_usb_device_autoconnect">Autoconnect</string>
    <string name="pref_category_connection_bt">Bluetooth connection</string>
    <string name="pref_category_connection_usb">USB connection</string>
    <string name="pref_category_send_commands">Sending commands</string>
    <string name="pref_category_webserver">Web-Server</string>
    <string name="pref_category_gpio" translatable="false">GPIO</string>
    <string name="pref_category_other">Other</string>
    <string name="pref_main_header_bluetooth" translatable="false">Bluetooth</string>
    <string name="pref_main_header_usb" translatable="false">USB</string>
    <string name="pref_main_header_serial" translatable="false">Serial (/dev/tty*)</string>
    <string name="pref_main_header_i2c" translatable="false">I2C (/dev/i2c*)</string>
    <string name="pref_main_header_webserver" translatable="false">WebSocket</string>
    <string name="pref_main_header_gpio" translatable="false">GPIO</string>
    <string name="pref_main_header_hotkeys">Keyboard (/dev/input/event*)</string>
    <string name="pref_main_header_sending_commands">Sending commands</string>
    <string name="pref_main_header_extra">Extra</string>
    <string name="pref_main_header_other">Other</string>
    <string name="pref_title_bluetooth_connection">Enable bluetooth connection</string>
    <string name="pref_title_bluetooth_devices_list">Bluetooth device</string>
    <string name="pref_title_bluetooth_autoconnect">Auto connect to bluetooth device</string>
    <string name="pref_title_enable_if_off">AutoEnable bluetooth adapter if off</string>
    <string name="pref_title_usb_connection">Enable USB connection</string>
    <string name="pref_title_usb_devices_list">USB device</string>
    <string name="pref_title_usb_reset_hub">Reconnect USB-hub [ Root ]</string>
    <string name="pref_summary_usb_reset_hub">Reconnect USB-hub if the USB-device is not recognized when service is started</string>
    <string name="pref_title_detect_command_by_new_line">Detect received command by new line</string>
    <string name="pref_summ_detect_command_by_new_line"> </string>
    <string name="pref_title_dtr" translatable="false">DTR - Data Terminal Ready</string>
    <string name="pref_summ_dtr">Use DTR line to determine serial channel readiness</string>
    <string name="pref_title_rts" translatable="false">RTS / CTS</string>
    <string name="pref_summ_rts" translatable="false">Request To Send / Clear To Send</string>
    <string name="pref_title_data_bits" translatable="false">Data Bits</string>
    <string-array name="pref_data_bits_titles" translatable="false">
        <item>5 data bits</item>
        <item>6 data bits</item>
        <item>7 data bits</item>
        <item>8 data bits</item>
    </string-array>
    <string-array name="pref_data_bits_values" translatable="false">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string name="pref_title_stop_bits" translatable="false">Stop Bits</string>
    <string-array name="pref_stop_bits_titles" translatable="false">
        <item>1 stop bit</item>
        <item>1.5 stop bits</item>
        <item>2 stop bits</item>
    </string-array>
    <string-array name="pref_stop_bits_values" translatable="false">
        <item>1</item>
        <item>3</item>
        <item>2</item>
    </string-array>
    <string name="pref_title_parity" translatable="false">Parity</string>
    <string-array name="pref_parity_titles" translatable="false">
        <item>No parity</item>
        <item>Odd parity</item>
        <item>Even parity</item>
        <item>Mark parity</item>
        <item>Space parity</item>
    </string-array>
    <string-array name="pref_parity_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="pref_title_baud_rate">Baud Rate</string>
    <string name="pref_title_i2c_connection">Enable communication by I2C</string>
    <string name="pref_title_i2c_devices">I2C device name in /dev (format: deviceName|slaveAddress)</string>
    <string name="pref_title_i2c_request_data_delay">Request data delay (ms)</string>
    <string name="pref_title_serial_connection">Enable communication by Serial</string>
    <string name="pref_title_serial_baudrate">Baudrate</string>
    <string-array name="pref_serial_baudrate_values" translatable="false">
        <item>0</item>
        <item>50</item>
        <item>75</item>
        <item>110</item>
        <item>134</item>
        <item>150</item>
        <item>200</item>
        <item>300</item>
        <item>600</item>
        <item>1200</item>
        <item>1800</item>
        <item>2400</item>
        <item>4800</item>
        <item>9600</item>
        <item>19200</item>
        <item>38400</item>
        <item>57600</item>
        <item>115200</item>
        <item>230400</item>
        <item>460800</item>
        <item>500000</item>
        <item>576000</item>
        <item>921600</item>
        <item>1000000</item>
        <item>1152000</item>
        <item>1500000</item>
        <item>2000000</item>
        <item>2500000</item>
        <item>3000000</item>
        <item>3500000</item>
        <item>4000000</item>
    </string-array>
    <string name="pref_title_serial_devices">Serial devices names in /dev (separated by commas)</string>
    <string name="pref_title_crlf">Add CR&#38;LF</string>
    <string name="pref_summ_crlf">Add Carriage Return and Line Feed symbols to end of sending data</string>
    <string name="pref_title_send_brightness_sensor">Send light sensor data</string>
    <string name="pref_summary_send_brightness_sensor">Format {lightsensormode:0&#8211;7} where:\n7 - MAX, 6 - SUNLIGHT, 5 - SHADE, 4 - OVERCAST\n3 - SUNRISE, 2 - CLOUDY, 1 - FULLMOON, 0 - NO MOON</string>
    <string name="pref_title_send_brightness_settings">Send screen brightness data</string>
    <string name="pref_summary_send_brightness_settings">When screen brightness change in manual mode, brightness level will send\nFormat {brightness:0&#8211;255}\nThis option does not work when the automatic (adaptive) brightness control is enabled</string>
    <string name="pref_title_send_screen_state">Send screen state data</string>
    <string name="pref_summary_send_screen_state">Send screen on/off state\nFormat: {screen:on} {screen:off}</string>
    <string name="pref_title_autostart">Autostart on boot</string>
    <string name="pref_title_autostart_delay">Autostart delay (seconds)</string>
    <string name="pref_title_stop_service_when_screen_off">Stop Service when screen is off</string>
    <string name="pref_title_stop_when_screen_off_delay">Delay before service stop (seconds)</string>
    <string name="pref_title_start_when_screen_on">Start Service when screen is on</string>
    <string name="pref_title_start_when_screen_on_delay">Delay before service start (seconds)</string>
    <string name="pref_title_volume_show_ui">Show volume UI on volume change</string>
    <string name="pref_title_debug">Debug</string>
    <string name="pref_summ_debug">Enable popups and send additional information to logcat</string>
    <string name="sym_plus_minus" translatable="false">±</string>
    <string name="toast_received_command" translatable="false">&lt;%1$s:%2$s&gt;</string>
    <string name="dialog_title_confirm_delete_command">Delete command?</string>
    <string name="dialog_content_delete_command">Are you sure to delete command %1$s?</string>
    <string name="dialog_delete_positive">Delete</string>
    <string name="default_key" translatable="false">click</string>
    <string name="pref_title_autoset">Autoset key/value</string>
    <string name="pref_title_scatter">Value deviation (±)</string>
    <string name="pref_title_is_through">Through command</string>
    <string name="pref_summ_is_through">If the command has been recognized, it is still to create a broadcast to other applications</string>
    <string name="pref_title_command_action_category">Action category</string>
    <string name="pref_title_command_action_volume">Volume</string>
    <string name="pref_title_command_action_media">Media</string>
    <string name="pref_title_command_action_application">Application / Shortcut</string>
    <string name="pref_title_key">Key</string>
    <string name="pref_title_value">Value</string>
    <string name="pref_widget_send_title_title">Text / Icon</string>
    <string name="pref_widget_title_text">Text</string>
    <string name="pref_widget_receive_default_text">Data: %key / %value</string>
    <string name="pref_widget_title_position">Text position</string>
    <string name="pref_widget_title_fontSize">Font Size (sp)</string>
    <string name="pref_widget_title_fontColor">Font Color</string>
    <string name="pref_widget_title_backgroundColor">Background Color</string>
    <string name="pref_widget_title_exampleColor">Palette</string>
    <string name="pref_widget_title_multiline_align">Alignment of multiline text</string>
    <string name="pref_widget_title_use_custom_font">Use custom font</string>
    <string name="pref_widget_title_font_file">Font file (*.ttf)</string>
    <string name="pref_title_gpio_use_interrupt">Enable GPIO interrupts</string>
    <string name="pref_summary_gpio_use_interrupt">Significantly reduce the load on CPU. Not all boards support this feature\ngpioX/edge = both</string>
    <string name="pref_title_gpio_as_io">Generate state change events</string>
    <string name="pref_summary_gpio_as_io">If enabled, the GPIO state change generate:\n&lt;gpioX:0&gt; and &lt;gpioX:1&gt;</string>
    <string name="pref_title_gpio_as_buttons">Generate button events</string>
    <string name="pref_summary_gpio_as_buttons">If enabled, the GPIO state change generate:\n&lt;gpioX:click&gt; and &lt;gpioX:hold&gt;\nthat allows to use GPIO ports as buttons</string>
    <string name="pref_title_gpio_debounce">Debounce delay (ms)</string>
    <string name="pref_title_long_press_delay">Hold (long press) delay (ms)</string>
</resources>