<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<ListPreference-->
        <!--android:key="sendTo"-->
        <!--android:defaultValue="usb_bt"-->
        <!--android:entries="@array/pref_widget_send_send_to_titles"-->
        <!--android:entryValues="@array/pref_widget_send_send_to_values"-->
        <!--android:negativeButtonText="@null"-->
        <!--android:positiveButtonText="@null"-->
        <!--android:title="@string/pref_widget_send_title_send_to" />-->

    <CheckBoxPreference
        android:key="switch"
        android:defaultValue="false"
        android:title="Виджет-переключатель"
        android:summary="Разделитель |\nНапример для поля Отправляемые данные: on|off"/>

    <EditTextPreference
        android:key="data"
        android:defaultValue=""
        android:title="Отправляемые данные"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <EditTextPreference
        android:key="text"
        android:defaultValue="\uf0a6"
        android:title="@string/pref_widget_send_title_title"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <EditTextPreference
        android:key="fontColor"
        android:defaultValue="#ffffff"
        android:title="@string/pref_widget_title_fontColor"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <EditTextPreference
        android:key="fontSize"
        android:defaultValue="24"
        android:title="@string/pref_widget_title_fontSize"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <EditTextPreference
        android:key="backgroundColor"
        android:defaultValue="#88000000"
        android:title="@string/pref_widget_title_backgroundColor"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <com.rarepebble.colorpicker.ColorPreference
        android:key="exmpleColor"
        android:title="@string/pref_widget_title_exampleColor" />

    <CheckBoxPreference
        android:key="useCustomFont"
        android:title="@string/pref_widget_title_use_custom_font"
        android:defaultValue="false" />
    <Preference
        android:key="fontFile"
        android:dependency="useCustomFont"
        android:title="@string/pref_widget_title_font_file" />

</PreferenceScreen>
